@@ -5,3 +5,9 @@ Isaiah, Satin, Snehal, Raghu
 # Instructions for running our program
 
 todo
+
+
+1. The Project is a Maven Project. 
+2. Open the Project in Maven
+3. Right click on App.java file --> Run Configurations --> Add Arguments "--module-path "JavaFX-Path" --add-modules javafx.controls,javafx.fxml
+4. Run 
